fix button not visible on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,9 @@ input {
     padding: 0;
     margin: 0;
 }
-body {
-    height: 100vh;
+body,
+html {
+    height: 100%;
     overflow: hidden;
 }
 .login-wrapper {
@@ -38,7 +39,7 @@ body {
     border: 1px solid #ccc;
     outline: none;
 }
-button {
+.login button {
     padding: 6px;
 }
 
@@ -49,15 +50,29 @@ button {
     width: 100%;
     height: 100%;
 }
-.editor .edit {
+.editor .header {
     display: flex;
     gap: 6px;
     align-items: center;
+    min-height: 35px;
+    padding: 4px;
 }
-.editor .edit label {
+.editor .header button {
+    height: 100%;
+    padding: 4px;
+}
+.editor .header .edit{
+    display: flex;
+    align-items: center;
+    gap:4px
+}
+.editor .header .space{
+    flex: 1;
+}
+.editor .header label {
     color: #555;
 }
-.editor .edit input {
+.editor .header input {
     width: 16px;
     height: 16px;
 }
